# restic-operator

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  Dockerfile  build.rs
.cargo/: config.toml
.github/workflows/: docker.yaml  pre-release.yml  release-plz.yml  rust.yml
crds/: restic-operator-0.1.0.yaml  restic-operator-0.1.2.yaml
examples/: backup.yaml  scheduled-backup.yaml
restic-crd/: CHANGELOG.md  Cargo.toml
restic-crd/src/: lib.rs
src/: context.rs  deploy.rs  error.rs  finalizer.rs  jobspec.rs  main.rs
src/backup/: deploy.rs  job.rs  mod.rs
src/resticprofile/: config.rs  mod.rs
src/schedule/: cronjob.rs  deploy.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
