[package]
name = "restic-operator"
version = "0.1.0"
edition = "2021"

[features]
default = []

integration-tests = []

[dependencies]
bon = "3.3.0"
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
k8s-openapi = { version = "0.23.0", default-features = false, features = ["v1_30"] }
kube = { version = "0.97.0", features = ["derive", "runtime"] }
restic-crd = { version = "0.1.0", path = "restic-crd" }
schemars = "0.8.21"
serde = "1.0.215"
serde_json = "1.0.133"
thiserror = "2.0.5"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
kube = { version = "0.97.0", default-features = false }
restic-crd = { version = "0.1.0", path = "restic-crd" }
serde_yaml = "0.9.34"

### WORKSPACE ###

[workspace]
resolver = "2"
members = [
    "restic-crd",
    "."
]

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

as_underscore = "warn"
clone_on_ref_ptr = "warn"
format_push_string = "warn"
str_to_string = "warn"

multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"
