[package]
name = "restic-crd"
description = "Restic Operator CRD definitions"
authors = ["Anshul Gupta <ansg191@anshulg.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
publish = ["anshulg"]

[dependencies]
bon = "3.3.0"
k8s-openapi = { version = "0.23.0", default-features = false, features = ["schemars", "v1_30"] }
kube = { version = "0.97.0", features = ["derive"] }
schemars = "0.8.21"
serde = "1.0.215"
serde_json = "1.0.133"
