[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cargo_metadata = "0.19.1"
clap = { version = "4.5.23", features = ["derive"] }
kube = { version = "0.97.0", default-features = false }
restic-crd = { version = "0.1.1", path = "../restic-crd", registry = "anshulg" }
serde_yaml = "0.9.34"

[lints]
workspace = true
